CHANGELOG
===========
cody - created project
sam - created tasks model